Make sure we use the right repository

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:JeremiePat/streamer.git"
+    "url": "git@github.com:JeremiePat/stream-journey.git"
   },
   "keywords": [
     "node",
